--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,46 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
-<div class="articles">
+<div class="destaques"><h1>Destaques</h1></div>
+<div class="footer_ajuste">
+    <div class="articles">
+    
     <div class="articles_main">
-        <app-big-card></app-big-card>
+        <app-big-card
+        Id="1"
+        photoCover="https://t.ctcdn.com.br/pQCs_UzmATAQTG_rv-Zv-eI79Uc=/640x360/smart/i831671.png"
+        cardTitle="Analista acredita que GTA 6 pode ser um grande sucesso no Xbox Series S por motivo simples: seria a maneira mais barata de jogar o mundo aberto da Rockstar"
+        cardDescription="Ainda não sabemos o mês de lançamento de GTA 6, mas sabemos que ele chegará no outono de 2025.
+        Este é, sem dúvida, o jogo mais aguardado dos últimos tempos, portanto, as expectativas estão mais altas do que nunca
+         para o próximo grande jogo de mundo aberto da"
+         gameName="Grand theft auto VI"
+        ></app-big-card>
     </div>
     <hr>
     <div class="articles_others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        Id="2"
+        photoCover="https://image.api.playstation.com/vulcan/ap/rnd/202411/2918/887820d47d0128244ee4a4b52b1b9dbf27e93b9c690b5627.png"
+        gameName="Split Fiction"
+        cardTitle="Split Fiction tem surpresa agradável para fãs de soulslike — e não é a dificuldade"
+        ></app-small-card>
+        <app-small-card
+        Id="3"
+        photoCover="https://www.adrenaline.com.br/wp-content/uploads/2025/03/silent-hill-f-anunciado-para-pc-ps5-xbox-com-4k-e-dlss.png"
+        gameName="Silent Hill F"
+        cardTitle="Silent Hill f terá violência perturbadora, com mutilações e pessoas queimadas vivas, indica órgão de classificação indicativa dos EUA"
+        ></app-small-card>
+        <app-small-card
+        Id="4"
+        photoCover="https://universosagas.ig.com.br/wp-content/uploads/2024/11/The-Last-of-Us-2a-temporada-ganha-previsao-de-estreia-em-2025.jpg"
+        gameName="The Last of Us Serie"
+        cardTitle="Previsão de estreia de The Last of Us 2ª temporada é revelada pela Max e HBO | Universo Sagas"
+        ></app-small-card>
     </div>
-</div>
+    </div>
+    <div class="footer">
+    <footer>
+        <h1>Angular Project</h1>
+        <p>Projeto de um blog interativo com a utilização com Framework Angular</p>
+        <span>By <a href="https://www.linkedin.com/in/felipe-silva-9a5950242/">{{name}}</a></span>
+    </footer>
+    </div>
+</div>    
