--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,15 @@
     background-color: #000;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    justify-content: center;
 }
 a{
     text-decoration: none;
+}
+.destaques{
+    width: 100%;
+    justify-items: center;
+}
+.destaques > h1{
+    font-size: 50px;
 }
